--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <h1>Julia Ma</h1>
         <p>Slumpiest slump</p>
         <p>I like potatoes tho</p>
+        <img src = https://media1.tenor.com/images/117a82ae55a78d66bed9f772dd73088e/tenor.gif?itemid=5192100>
     </body>
     </head>
 </html>
