--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
         <h1>Julia Ma</h1>
         <p>Slumpiest slump</p>
         <p>I like potatoes tho</p>
-        <img src = https://media1.tenor.com/images/117a82ae55a78d66bed9f772dd73088e/tenor.gif?itemid=5192100>
     </body>
+    <body1>
+        <h1> DON'T TAP THAT UNICORN </h1>
+        <a href="https://www.youtube.com/embed/Qmkn59N5SDg">
+        <img src = "https://media1.tenor.com/images/117a82ae55a78d66bed9f772dd73088e/tenor.gif?itemid=5192100">
+        </a>
+    </body1>
     </head>
+    
 </html>
